# pico_4wd_car-2.0

./: .gitconfig  .gitignore  COLOR_INPUT_ENHANCEMENT.md  COLOR_INPUT_USAGE.md  INPUT_FIX_README.md  LEDS.py  RGB_FIX_README.md  SPI.py  Sensor_klasse.py  i2c.py  main.py  package.json  pico_4wd_car-2.0.code-workspace  pyproject.toml  pyvenv.cfg  requirements.txt  test_color_input.py  test_input_fix.py  test_rgb_conversion.py
.github/: copilot-instructions.md
Code_Torben/: servo_mp.py  sonar_mp.py  ultrasonic_mp.py
examples/app_control/: app_control.py
examples/learn_modules/: sonar_2_servo_rotate.py
learn/: basic.py  classen.py  luca.py
libs/: Old-main.py  color.py  color_test.py  convert.py  final_test.py  helper.py  hub.py  line_track.py  log.txt  main.py  motors.py  random_line.py  sonar.py  test.py  tets.py  ws.py  ws2812.py
libs/classes/: follow.py  follow_fake.py  follow_multiple.py  follow_mux.py  grayscale.py  i2c.py  lock.py  motors.py  mux.py  new_tcs.py  standalone_tcs34725.py  tcs34725.py  tcs34725_mux.py  tcs_online.py
old/: standalone_tcs34725.py  tcs34725.py
