[project]
name = "pico-4wd-car-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "ansicon==1.89.0",
    "anyio==4.9.0",
    "argcomplete==3.6.2",
    "argparse-addons==0.12.0",
    "attrs==25.3.0",
    "autoflake==2.3.1",
    "beautifulsoup4==4.13.4",
    "bincopy==20.1.0",
    "bitarray==3.5.0",
    "bitstring==4.3.1",
    "black==24.10.0",
    "blessed==1.21.0",
    "blkinfo==0.2.0",
    "build==1.2.2.post1",
    "cache-to-disk==2.0.0",
    "cachecontrol==0.14.3",
    "cachetools==5.5.2",
    "cachier==3.3.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cleo==2.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "crashtest==0.4.1",
    "cryptography==45.0.5",
    "deprecated==1.2.18",
    "distlib==0.3.9",
    "docutils==0.21.2",
    "dulwich==0.22.8",
    "ecdsa==0.19.1",
    "editor==1.6.6",
    "esptool==4.9.0",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "findpython==0.6.3",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "inquirer==3.4.0",
    "installer==0.7.0",
    "intelhex==2.3.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.2.1",
    "jinxed==1.3.0",
    "jsonlines==4.0.0",
    "jsons==1.6.3",
    "keyring==25.6.0",
    "libcst==1.8.2",
    "libusb==1.0.27.post4",
    "loguru==0.7.3",
    "mailbits==0.2.2",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "micropython-stubber==1.25.0.post3",
    "more-itertools==10.7.0",
    "mpflash==1.25.1",
    "mpremote==1.25.0",
    "msgpack==1.1.1",
    "mypy==1.16.1",
    "mypy-extensions==1.1.0",
    "mypy-gitlab-code-quality==1.3.0",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "pathspec==0.12.1",
    "pbs-installer==2025.7.2",
    "pipx==1.7.1",
    "pkg-about==1.2.11",
    "pkginfo==1.12.1.2",
    "platformdirs==4.3.8",
    "poetry==2.1.3",
    "poetry-core==2.1.3",
    "portalocker==3.2.0",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeps==3.0.1",
    "pyelftools==0.32",
    "pyflakes==3.4.0",
    "pygithub==2.6.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pynacl==1.5.0",
    "pypi-simple==1.6.1",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "pyright==1.1.402",
    "pyserial==3.5",
    "python-minifier==2.11.3",
    "pyusb==1.3.1",
    "pywin32==310",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.2",
    "pyyaml-ft==8.0.0",
    "rapidfuzz==3.13.0",
    "readchar==4.2.1",
    "reedsolo==1.7.0",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rich-click==1.8.9",
    "runs==1.2.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "stdlib-list==0.11.1",
    "tenacity==9.0.0",
    "tomli-w==1.2.0",
    "tomlkit==0.13.3",
    "trove-classifiers==2025.5.9.12",
    "typed-config==1.5.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "typish==1.9.3",
    "urllib3==2.5.0",
    "userpath==1.9.2",
    "uv==0.7.19",
    "virtualenv==20.31.2",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "win32-setctime==1.2.0",
    "wrapt==1.17.2",
    "xmod==1.8.1",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]

[tool.uv.workspace]
members = [
    "circuitpython",
]
